unpackaged/main/default/objects/GetFeedback_Survey_Responses__c/GetFeedback_Survey_Responses__c.object-meta.xml
<CustomObject>
    <description>Used to link GetFeedback survey results to Salesforce Cases</description>
    <label>Survey Responses</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>