unpackaged/main/default/objects/GetFeedback_Survey_Responses__c/fields/Account_Name_on_Case__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_on_Case__c</fullName>
    <formula>Case_Number__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name on Case</label>
    <type>Text</type>
</CustomField>