unpackaged/main/default/objects/GetFeedback_Survey_Responses__c/fields/Case_Owner_Reporting_Tags__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Reporting_Tags__c</fullName>
    <formula>Case_Number__r.Case_Owner_Reporting_Tags__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Reporting Tags</label>
    <type>Text</type>
</CustomField>