unpackaged/main/default/objects/GetFeedback_Survey_Responses__c/fields/Comment_Text__c.field-meta.xml
<CustomField>
    <fullName>Comment_Text__c</fullName>
    <inlineHelpText>General comments from customers that entered 4 stars or more</inlineHelpText>
    <label>Comment Text</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>