unpackaged/main/default/objects/GetFeedback_Survey_Responses__c/fields/Completion_Timeframe_Suitable__c.field-meta.xml
<CustomField>
    <fullName>Completion_Timeframe_Suitable__c</fullName>
    <label>Completion Timeframe Suitable</label>
    <length>3</length>
    <type>Text</type>
</CustomField>