unpackaged/main/default/objects/GetFeedback_Survey_Responses__c/fields/Experience_Rating__c.field-meta.xml
<CustomField>
    <fullName>Experience_Rating__c</fullName>
    <inlineHelpText>Experience Star Rating 1 to 5</inlineHelpText>
    <label>Experience Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>