unpackaged/main/default/objects/GetFeedback_Survey_Responses__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <label>Feedback</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>