unpackaged/main/default/objects/GetFeedback_Survey_Responses__c/fields/Improvement_Text__c.field-meta.xml
<CustomField>
    <fullName>Improvement_Text__c</fullName>
    <inlineHelpText>Improvement ideas from customers that entered 3 stars or less</inlineHelpText>
    <label>Improvement Text</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>