unpackaged/main/default/objects/GetFeedback_Survey_Responses__c/fields/No_of_Followups__c.field-meta.xml
<CustomField>
    <fullName>No_of_Followups__c</fullName>
    <label>No of Followups</label>
    <summaryForeignKey>Survey_Followup__c.Survey_Responses__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>