unpackaged/main/default/objects/GetFeedback_Survey_Responses__c/fields/Our_People_Rating__c.field-meta.xml
<CustomField>
    <fullName>Our_People_Rating__c</fullName>
    <label>Our People Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>