unpackaged/main/default/objects/GetFeedback_Survey_Responses__c/fields/Overall_Experience_rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Experience_rating__c</fullName>
    <label>Overall Experience Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>