unpackaged/main/default/objects/GetFeedback_Survey_Responses__c/fields/Requires_Followup__c.field-meta.xml
<CustomField>
    <fullName>Requires_Followup__c</fullName>
    <formula>IF( Overall_Experience_rating__c &lt; 4 , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires Followup</label>
    <type>Checkbox</type>
</CustomField>