unpackaged/main/default/objects/GetFeedback_Survey_Responses__c/fields/Satisfied_With_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Satisfied_With_Outcome__c</fullName>
    <label>Satisfied With Outcome</label>
    <length>3</length>
    <type>Text</type>
</CustomField>