unpackaged/main/default/objects/GetFeedback_Survey_Responses__c/fields/Sufficient_Communication__c.field-meta.xml
<CustomField>
    <fullName>Sufficient_Communication__c</fullName>
    <label>Sufficient Communication</label>
    <length>3</length>
    <type>Text</type>
</CustomField>