unpackaged/main/default/objects/GetFeedback_Survey_Responses__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Number__c</columns>
    <columns>Account_Name_on_Case__c</columns>
    <columns>Experience_Rating__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>