unpackaged/main/default/objects/GetFeedback_Survey_Responses__c/listViews/Response_follow_up_completed.listView-meta.xml
<ListView>
    <fullName>Response_follow_up_completed</fullName>
    <columns>NAME</columns>
    <columns>Case_Owner_Reporting_Tags__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account_Name_on_Case__c</columns>
    <columns>Case_Number__c</columns>
    <columns>Our_People_Rating__c</columns>
    <columns>Overall_Experience_rating__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>3/2/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>Requires_Followup__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>No_of_Followups__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Case_Owner_Reporting_Tags__c</field>
        <operation>notContain</operation>
        <value>AMS,AMSC,CLOUD,ePlanning,SaaS,T1,Transition,Enablement,R&amp;D</value>
    </filters>
    <label>Response follow up completed</label>
</ListView>